<resources>
    <string name="app_name">Persistence</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="open_settings">Open Settings</string>
    <string name="settings_display_title">Aktuelle Einstellungen</string>
    <string name="disable_brain_title">Disable Brain</string>
    <string name="settings_value_not_set">Nicht gesetzt</string>
    <string name="settings_value_on">Ein</string>
    <string name="settings_value_off">Aus</string>
    <string name="settings_value_attachment_disabled_by_dependency">Aus (deaktiviert, weil Sync aus ist)</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="base_address">Base Address</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="open_notes">Open Notes</string>
</resources>
